# memc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.am  README.md  bison-report  build_release_linux.sh  configure.ac  run-tests.py
data/test/: report.css
libs/: binary_exp.mem  callgrind.out.27050  char.mem  int.mem  memc_valgrind.sh  test.mem  valgrind-log  valgrind-suppressions
libs/m/: Bool.mem  String.mem  assert.mem  test1.mem  test2.mem
libs/m/fuck/: me.mem  you.mem
libs/m/suck/: me.mem
src/: check.h  compile~  config.h.in  cxx.hpp  errors.h  macro.h  mem-compile.c  mem-tokenize.c  memc.cpp
src/codegen/: ICodegen.hpp  TStack.hpp
src/codegen/llvm/: Codegen.cpp  Codegen.hpp  TypeMaker.cpp  TypeMaker.hpp
src/langmem/: Bison.cpp  Bison.hpp  Bison.ypp  Parser.cpp  Parser.hpp  Parser.in  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  Tokenizer_test.cpp
src/mem/: Compiler.cpp  Compiler.hpp  Metadata.cpp  Metadata.hpp  Util.cpp  Util.hpp  number.cpp  number.hpp  ss.hpp
src/mem/ast/: Ast.cpp  Ast.hpp  util.cpp  util.hpp
src/mem/ast/dumper/: Dumper.cpp  (+3 more)
src/mem/codegen/: ICodegen.hpp  TStack.hpp
src/mem/decorator/: Decorator.hpp  External.cpp  External.hpp  FunctionDecorator.hpp  Overriding.cpp  Overriding.hpp  Require.cpp  Require.hpp  Virtual.cpp  Virtual.hpp
src/mem/dep/: Dep.cpp  Dep.hpp  Tree.cpp  Tree.hpp
src/mem/fs/: File.cpp  File.hpp  FileManager.cpp  FileManager.hpp  path.cpp  path.hpp  path_test.cpp
src/mem/grammar/: mem.l  mem.y  mem2.y  mem3.y
src/mem/lang/: Bison.c  Bison.cpp  Bison.hpp  Bison.ypp  Flex.cpp  Flex.lpp  Token.hpp  TokenKind.hpp  Tokenizer.cpp  Tokenizer.hpp
src/mem/log/: ConsoleFormatter.cpp  ConsoleFormatter.hpp  ConsoleLogger.cpp  ConsoleLogger.hpp  Formatter.cpp  Formatter.hpp  Logger.cpp  Logger.hpp  Message.cpp  Message.hpp  MessageLevel.hpp  TestFriendlyFormatter.cpp  TestFriendlyFormatter.hpp  XmlFormatter.cpp  XmlFormatter.hpp  errors.errors-in  errors.hpp
src/mem/opt/: CliOption.hpp  Option.cpp  Option.hpp  Options.cpp  Options.hpp  Parser.cpp  Parser.hpp
src/mem/parser/: Bison.cpp  Bison.hpp  Exception.cpp  Exception.hpp  NodeTypes.cpp  NodeTypes.hpp  NodeTypes.in  SourceLocation.cpp  SourceLocation.hpp  location.hh  position.hh  stack.hh
src/mem/st/: Alias.cpp  Alias.hpp  Arg.cpp  Arg.hpp  Array.cpp  Array.hpp  ArrayType.cpp  ArrayType.hpp  Class.cpp  Class.hpp  Constant.cpp  Constant.hpp  CoreTypes.cpp  CoreTypes.hpp  EnumType.cpp  EnumType.hpp  Field.cpp  Field.hpp  Func.cpp  Func.hpp  Function.cpp  Function.hpp  FunctionSignature.cpp  FunctionSignature.hpp  FunctionType.cpp  FunctionType.hpp  Instance.cpp  Instance.hpp  IntConstant.cpp  IntConstant.hpp  IntType.cpp  IntType.hpp  Kind.in  Macro.cpp  Macro.hpp  Namespace.cpp  Namespace.hpp  Null.cpp  Null.hpp  Path.cpp  (+28 more)
src/mem/tokenizer/: Flex.cpp  Flex.hpp
src/mem/tool/: CommandChain.cpp  CommandChain.hpp  Toolbox.cpp  Toolbox.hpp
src/memc/: Compiler.cpp  Compiler.hpp  main.cpp
src/memc/opt/: Option.cpp  Option.hpp  Options.cpp  Options.hpp
src/memc/tool/: CommandChain.cpp  CommandChain.hpp  Toolbox.cpp  Toolbox.hpp
stdlib/: cstring.mem
stdlib/c/: stdio.mem
tests/: ForSimple.memt  IfConsecutive.memt  IfNested.memt  IfNested3.memt  IfSimple.memt  IfWhile.memt  WhileConsecutive.memt  WhileIf.memt  WhileNested.mem  WhileNested3.memt  WhileSimple.memt  array.Dynamic.memt  array.DynamicCstring.memt  array.Static.memt  array.dynamic.Get.memt  array.dynamic.Set.memt  array.static.BadParameterCount.memt  array.static.BadSizeParameter.memt  array.static.BadTypeParameter.memt  array.static.Get.memt  array.static.NoParameters.memt  array.static.NoSizeParameter.memt  array.static.PointerToUnsizedArray.memt  array.static.Set.memt  cast.safe.CharLiteralToInt.memt  cast.safe.IndirectCharLiteralToInt.memt  cast.safe.IntToInt.memt  class.Alloc.memt  class.InheritNonClass.memt  class.Simple.memt  class.dynamic.FieldAccess.memt  class.function.Simple.memt  class.static.FieldAccess.memt  class.static.field.Get.memt  class.static.field.Set.memt  dereference.Constant.memt  dereference.NonPointer.memt  dereference.Pointer.memt  enum.ContainingFunction.memt  flow.for.Nested.memt  (+37 more)
tests/array/: static.BadParameterCount.memt  static.BadSizeParameter.memt  static.BadTypeParameter.memt  static.NoParameters.memt  static.NoSizeParameter.memt
tests/bool/: AssigningToTrue.memt
tests/cast/: safe.CharLiteralToInt.memt  safe.IndirectCharLiteralToInt.memt  safe.IntToInt.memt
tests/class/: InheritNonClass.memt  InstantiateEmptyClass.memt  function.ParameterAndReturnType.memt  function.Simple.memt  inherit.2Levels.memt  inherit.2LevelsWithOneEmpty.memt
tests/derefence/: Constant.memt  NonPointer.memt  Pointer.memt
tests/dot/: Chaining.memt
tests/enum/: Alloc.memt  AssignCharEnumToChar.memt  AssignCharToCharEnum.memt  AssignEnumToInt.memt  AssignIntToEnum.memt  SimpleDeclaration.memt  VariableDeclaration.memt
tests/flow/: for.Nested.memt  if.Consecutive.memt  if.Nested3.memt  if.Simple.memt  if.While.memt  while.Consecutive.memt  while.Nested.memt  while.NestedAndConsecutive.memt
tests/function/: AssignToStaticFunction.memt  BadParameterCount.memt  PassingArrayParameter.memt  ReassignFunctor.memt  Simple.memt  Type.memt  WithParameters.memt  parameter.Array.memt  parameter.Pointer.memt  parameter.Tuple.memt  return.ArrayType.memt  return.PointerType.memt  return.SimpleType.memt  return.TupleType.memt
tests/int/: constant.Multiply.memt  variable.Add.memt  variable.Divide.memt  variable.Multiply.memt  variable.Subtract.memt
tests/main/: MultipleMain.memt  NoMain.memt
tests/pointer/: PassingPointerAsNonPointer.memt
tests/primitive/: alloc.Dynamic.memt  alloc.DynamicArray.memt
tests/scope/: InvalidAccessAfterFor.memt  InvalidAccessAfterIf.memt  InvalidAccessAfterWhile.memt
tests/tuple/: Declaration  MultiAssignment.memt  TupleExpr.memt
tests/variable/: declaration.NoTypeNoValue.memt  declaration.TypeAndNoValue.memt
utils/: GenAmSources.sh  GenErrorClasses.py  GenNodeTypes.py  GenSimpleRtti.py  GenTokenKind.py  ProcessNodeTypes.sh  RunTests.py
(+152 files in other folders)
