src = \
 src/memc.cpp
src_mem = \
 src/mem/Compiler.cpp \
 src/mem/Compiler.hpp \
 src/mem/number.cpp \
 src/mem/number.hpp \
 src/mem/Util.cpp \
 src/mem/Util.hpp
src_mem_ast = \
 src/mem/ast/util.cpp \
 src/mem/ast/util.hpp
src_mem_ast_dumper = \
 src/mem/ast/dumper/Dumper.cpp \
 src/mem/ast/dumper/Dumper.hpp \
 src/mem/ast/dumper/XmlDumper.cpp \
 src/mem/ast/dumper/XmlDumper.hpp
src_mem_ast_node = \
 src/mem/ast/node/BinaryExpression.cpp \
 src/mem/ast/node/BinaryExpression.hpp \
 src/mem/ast/node/Block.cpp \
 src/mem/ast/node/Block.hpp \
 src/mem/ast/node/Call.cpp \
 src/mem/ast/node/Call.hpp \
 src/mem/ast/node/Class.cpp \
 src/mem/ast/node/Class.hpp \
 src/mem/ast/node/Field.cpp \
 src/mem/ast/node/Field.hpp \
 src/mem/ast/node/File.cpp \
 src/mem/ast/node/File.hpp \
 src/mem/ast/node/Func.cpp \
 src/mem/ast/node/Func.hpp \
 src/mem/ast/node/LeftUnary.cpp \
 src/mem/ast/node/LeftUnary.hpp \
 src/mem/ast/node/New.cpp \
 src/mem/ast/node/New.hpp \
 src/mem/ast/node/Node.cpp \
 src/mem/ast/node/Node.hpp \
 src/mem/ast/node/Number.cpp \
 src/mem/ast/node/Number.hpp \
 src/mem/ast/node/Primitive.cpp \
 src/mem/ast/node/Primitive.hpp \
 src/mem/ast/node/Root.cpp \
 src/mem/ast/node/Root.hpp \
 src/mem/ast/node/Text.cpp \
 src/mem/ast/node/Text.hpp \
 src/mem/ast/node/Type.cpp \
 src/mem/ast/node/Type.hpp \
 src/mem/ast/node/Use.cpp \
 src/mem/ast/node/Use.hpp \
 src/mem/ast/node/VarDecl.cpp \
 src/mem/ast/node/VarDecl.hpp \
 src/mem/ast/node/While.cpp \
 src/mem/ast/node/While.hpp
src_mem_ast_visitor = \
 src/mem/ast/visitor/BlockTypesChecker.cpp \
 src/mem/ast/visitor/BlockTypesChecker.hpp \
 src/mem/ast/visitor/CheckValidity.cpp \
 src/mem/ast/visitor/CheckValidity.hpp \
 src/mem/ast/visitor/FindClasses.cpp \
 src/mem/ast/visitor/FindClasses.hpp \
 src/mem/ast/visitor/FindEntryPoint.cpp \
 src/mem/ast/visitor/FindEntryPoint.hpp \
 src/mem/ast/visitor/FindUse.cpp \
 src/mem/ast/visitor/FindUse.hpp \
 src/mem/ast/visitor/Prechecker.cpp \
 src/mem/ast/visitor/Prechecker.hpp \
 src/mem/ast/visitor/TopTypesChecker.cpp \
 src/mem/ast/visitor/TopTypesChecker.hpp \
 src/mem/ast/visitor/TypeChecker.cpp \
 src/mem/ast/visitor/TypeChecker.hpp \
 src/mem/ast/visitor/TypeMatch.cpp \
 src/mem/ast/visitor/TypeMatch.hpp \
 src/mem/ast/visitor/Visitor.cpp \
 src/mem/ast/visitor/Visitor.hpp
src_mem_codegen = \
 src/mem/codegen/ICodegen.hpp
src_mem_codegen_llvm = \
 src/mem/codegen/llvm/Codegen.cpp \
 src/mem/codegen/llvm/Codegen.hpp
src_mem_dep = \
 src/mem/dep/Dep.cpp \
 src/mem/dep/Dep.hpp \
 src/mem/dep/Tree.cpp \
 src/mem/dep/Tree.hpp
src_mem_fs = \
 src/mem/fs/File.cpp \
 src/mem/fs/File.hpp \
 src/mem/fs/FileManager.cpp \
 src/mem/fs/FileManager.hpp
src_mem_fs_position = \
 src/mem/fs/position/Composite.cpp \
 src/mem/fs/position/Composite.hpp \
 src/mem/fs/position/Cursor.cpp \
 src/mem/fs/position/Cursor.hpp \
 src/mem/fs/position/Position.cpp \
 src/mem/fs/position/Position.hpp \
 src/mem/fs/position/Range.cpp \
 src/mem/fs/position/Range.hpp
src_mem_lang = \
 src/mem/lang/Flex.lpp \
 src/mem/lang/Bison.ypp
src_mem_log = \
 src/mem/log/ConsoleFormatter.cpp \
 src/mem/log/ConsoleFormatter.hpp \
 src/mem/log/ConsoleLogger.cpp \
 src/mem/log/ConsoleLogger.hpp \
 src/mem/log/Errors.in \
 src/mem/log/Formatter.cpp \
 src/mem/log/Formatter.hpp \
 src/mem/log/Logger.cpp \
 src/mem/log/Logger.hpp \
 src/mem/log/Message.cpp \
 src/mem/log/Message.hpp \
 src/mem/log/MessageLevel.hpp
src_mem_opt = \
 src/mem/opt/Option.cpp \
 src/mem/opt/Option.hpp \
 src/mem/opt/Options.cpp \
 src/mem/opt/Options.hpp
src_mem_parser = \
 src/mem/parser/NodeTypes.cpp \
 src/mem/parser/NodeTypes.hpp
src_mem_st = \
 src/mem/st/Class.cpp \
 src/mem/st/Class.hpp \
 src/mem/st/CoreTypes.hpp \
 src/mem/st/Func.cpp \
 src/mem/st/Func.hpp \
 src/mem/st/Namespace.cpp \
 src/mem/st/Namespace.hpp \
 src/mem/st/Path.cpp \
 src/mem/st/Path.hpp \
 src/mem/st/Primitive.cpp \
 src/mem/st/Primitive.hpp \
 src/mem/st/Ptr.cpp \
 src/mem/st/Ptr.hpp \
 src/mem/st/Symbol.cpp \
 src/mem/st/Symbol.hpp \
 src/mem/st/SymbolKind.hpp \
 src/mem/st/SymbolTable.cpp \
 src/mem/st/SymbolTable.hpp \
 src/mem/st/Type.cpp \
 src/mem/st/Type.hpp \
 src/mem/st/Util.cpp \
 src/mem/st/Util.hpp \
 src/mem/st/Var.cpp \
 src/mem/st/Var.hpp
src_mem_st_visitor = \
 src/mem/st/visitor/DepBuilder.cpp \
 src/mem/st/visitor/DepBuilder.hpp \
 src/mem/st/visitor/IDumper.hpp \
 src/mem/st/visitor/XmlDumper.cpp \
 src/mem/st/visitor/XmlDumper.hpp \
 src/mem/st/visitor/Visitor.cpp \
 src/mem/st/visitor/Visitor.hpp

CXX=clang++
AUTOMAKE_OPTIONS = subdir-objects
AM_YFLAGS = -d

BUILT_SOURCES = \
 src/mem/lang/Bison.hpp


bin_PROGRAMS = memc
memc_SOURCES = $(src) \
		$(src_mem) \
		$(src_mem_ast) \
		$(src_mem_ast_dumper) \
		$(src_mem_ast_node) \
		$(src_mem_ast_visitor) \
		$(src_mem_codegen) \
		$(src_mem_codegen_llvm) \
		$(src_mem_dep) \
		$(src_mem_fs) \
		$(src_mem_fs_position) \
		$(src_mem_lang) \
		$(src_mem_log) \
		$(src_mem_opt) \
		$(src_mem_parser) \
		$(src_mem_st) \
		$(src_mem_st_visitor)
memc_LDADD = $(LLVM_LDADD)


.errors-in.hpp :
	$(PYTHON) utils/GenErrorClasses.py $< $@
